fix sticky-nav & overflow-body

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -10,6 +10,7 @@ html,
 body {
   width: 100%;
   height: 100vh;
+  position: absolute;
   font-family: "Cormorant Garamond", serif;
   scroll-behavior: smooth;
   overflow-x: hidden;
@@ -30,6 +31,7 @@ body::-webkit-scrollbar-corner {
 }
 
 main {
+  padding-top: 20px;
   text-align: center;
 }
 
@@ -67,6 +69,8 @@ h6 {
 
 #sticky__nav {
   width: 100%;
+  position: fixed;
+  top: 0;
   overflow: hidden;
   background-color: #fff;
   transition: 0.5s;
